# blending-evaluation

./: .gitignore  README.md  blendingsimulator.py  bulk_density.py  chevron_stacker.py  cimath.py  ciplot.py  demo_plant_simulator.py  evaluate_chevron_layers.py  evaluate_roundness.py  example.ipynb  execute.py  generator.py  material_stream_provider.py  mypy.ini  optimize_roundness.py  plot_heightmap.py  pyproject.toml  requirements-dev.txt  requirements.txt  roundness.py  setup.py  stacker.py
apps/benchmark_explorer/: README.md  __main__.py  pyproject.toml  requirements.txt  setup.py  testlets.py
apps/benchmark_explorer/benchmark_explorer/: __main__.py  testlets.py
apps/benchmark_explorer/benchmark_explorer/simulator_benchmark_explorer/: __main__.py  testlets.py
apps/benchmark_explorer/src/benchmark_explorer/simulator_benchmark_explorer/: __main__.py  evaluation.py  testlets.py
apps/bmh_apps/: README.md  pyproject.toml  requirements.txt  setup.py
apps/bmh_apps/benchmark/: evaluate_deposition.py
apps/bmh_apps/bmh_apps/benchmark/: evaluate_chevron_layers.py  evaluate_deposition.py  evaluate_deposition_simple.py  evaluate_references.py  optimize_deposition.py
apps/bmh_apps/bmh_apps/benchmark/conf/: config.yaml
apps/bmh_apps/bmh_apps/benchmark/experiment_scripts/: experiment_e2_convergence_preconditioned_f1-1.sh  experiment_e2_convergence_preconditioned_f1-f1.sh  experiment_e2_convergence_preconditioned_f1_f1_f2_f3.sh  experiment_e2_convergence_preconditioned_f1_f2.sh  experiment_e2_convergence_preconditioned_f1_f2_f3.sh  experiment_e2_convergence_random_f1-1.sh  experiment_e2_convergence_random_f1-f1.sh  experiment_e2_convergence_random_f1_f1_f2.sh  experiment_e2_convergence_random_f1_f1_f2_f3.sh  experiment_e2_convergence_random_f1_f2.sh  experiment_e2_convergence_random_f1_f2_f3.sh  experiment_e3_front_shape_preconditioned_f1_f2.sh  experiment_e3_front_shape_random_f1_2_f2.sh  (+6 more)
apps/bmh_apps/bmh_apps/bulk_density/: evaluate_bulk_density.py
apps/bmh_apps/bmh_apps/chevron/: chevron_path.py  evaluate_chevron_layers.py
apps/bmh_apps/bmh_apps/chevron_layers/: evaluate_chevron_layers.py
apps/bmh_apps/bmh_apps/front_evolution/: front_evolution.py  plot_quality_indicators.py  plot_quality_indicators_vs_generations.py  plot_quality_indicators_vs_variables.py  quality_indicators.py
apps/bmh_apps/bmh_apps/funvar/: export_fun.py  fun_var_explorer.py  fun_var_math.py  fun_var_results.py  non_dominated.py  plot_fun.py  plot_var.py  var_clustering.py  var_tsne.py
apps/bmh_apps/bmh_apps/helpers/: bed_size.py  ciplot.py  configure_logging.py  material_path_io.py  pretty_plot.py  stack_with_printer.py  stacker.py  stacker_printer.py  stockpile_math.py
apps/bmh_apps/bmh_apps/optimization/: optimize_stacker_path.py
apps/bmh_apps/bmh_apps/roundness/: evaluate_height_map_roundness.py  evaluate_roundness.py  optimize_roundness.py  roundness_evaluator.py
apps/bmh_apps/bmh_apps/tools/: combine_material_deposition.py  plot_heightmap.py  plot_ideal_stockpile.py  print_stack_chevron.py  print_stack_path.py  resampling.py  stacker_input_generator.py  test_resampling.py
apps/bmh_apps/bulk_density/: evaluate_bulk_density.py
apps/bmh_apps/bulk_density/tests/: test_bulk_density.py
apps/bmh_apps/chevron_layers/: evaluate_chevron_layers.py
apps/bmh_apps/helpers/: chevron_path.py  ciplot.py  stack_with_printer.py
apps/bmh_apps/helpers/tests/: test_stacker.py
apps/bmh_apps/optimization/: optimize_stacker_path.py
apps/bmh_apps/roundness/: evaluate_roundness.py  optimize_roundness.py  roundness.py  roundness_evaluator.py
apps/bmh_apps/tools/: combine_material_deposition.py  plot_heightmap.py  print_stack_chevron.py  print_stack_path.py  stacker_input_generator.py
apps/demo_plant_simulator/: README.md  demo_plant_simulator.py  pyproject.toml  requirements.txt  setup.py
apps/demo_plant_simulator/demo_plant_simulator/: __main__.py  demo_plant_simulator.py  influx_db_material_sampler.py  my_demo_plant.py
apps/solution_explorer/: README.md  __main__.py  graphs.py  pyproject.toml  requirements.txt  setup.py  testlets.py
apps/solution_explorer/solution_explorer/: __main__.py  graphs.py  solution.py  testlets.py
apps/solution_explorer/src/solution_explorer/: __main__.py  graphs.py
benchmark/: core.py  (+7 more)
libraries/blending_simulator_lib/: CMakeLists.txt  LICENSE  README.md  pyproject.toml
libraries/blending_simulator_lib/src/blending_simulator_lib/: __init__.py  _bindings.cpp  _blending_simulator_lib.pyi
libraries/bmh/: .gitignore  README.md  pyproject.toml  setup.py
libraries/bmh/bmh/benchmark/: __init__.py  core.py  data.py  material_deposition.py  reference_meta.py  simulator_meta.py
libraries/bmh/bmh/helpers/: reclaimed_material_evaluator.py  simple.py  stockpile_math.py
libraries/bmh/bmh/optimization/: __init__.py  optimization.py  optimization_result.py
libraries/bmh/bmh/simulation/: __init__.py  blending_simulator.py  bsl_blending_simulator.py  mathematical_blending_simulator.py  smooth_blending_simulator.py
libraries/bmh_jmetalpy_extensions/: README.md  pyproject.toml
libraries/bmh_jmetalpy_extensions/bmh_jmetalpy_extensions/util/: generator.py
libraries/data_explorer/: README.md  pyproject.toml  setup.py
libraries/data_explorer/data_explorer/: __init__.py  app.py  figure_toolbar_demo.py  gui.py  mpl_interaction.py  rating.py  testlet.py
libraries/data_explorer/src/data_explorer/: __init__.py  app.py  gui.py  testlet.py
libraries/jmetalpy_extensions/: pyproject.toml  setup.py
libraries/jmetalpy_extensions/jmetalpy_extensions/util/: comparator.py  evaluator.py  generator.py  observer.py  ranking.py
libraries/plant_simulator/: README.md  pyproject.toml  setup.py
libraries/plant_simulator/plant_simulator/: __init__.py  material_dumper.py  material_handler.py  material_sampler.py  plant.py  plot_server.py  simulated_mine.py
libraries/plant_simulator/plant_simulator/blending_system/: blending_system.py  deposition_strategies.py  reclaimer.py  stacker.py  stockpile.py
libraries/plant_simulator/src/plant_simulator/: material_sampler.py
(+185 files in other folders)
