[project]
name = "blending-evaluation"
version = "0.1.0"
description = "Bulk Material Homogenization Evaluation Workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jmetalpy_extensions",
    "bmh",
    "blending_simulator_lib",
    "plant_simulator",
    "data_explorer",
    "bmh_apps",
    "benchmark_explorer",
    "solution_explorer",
    "demo_plant_simulator"
]

[dependency-groups]
dev = [
    "pybind11-stubgen",
    "ruff",
    "mypy"
]

[tool.uv]
workspace = { members = [
    "libraries/jmetalpy_extensions",
    "libraries/bmh",
    "libraries/blending_simulator_lib",
    "libraries/plant_simulator",
    "libraries/data_explorer",
    "apps/bmh_apps",
    "apps/benchmark_explorer",
    "apps/solution_explorer",
    "apps/demo_plant_simulator"
] }

[tool.uv.sources]
jmetalpy_extensions = { workspace = true }
bmh = { workspace = true }
blending_simulator_lib = { workspace = true }
plant_simulator = { workspace = true }
data_explorer = { workspace = true }
bmh_apps = { workspace = true }
benchmark_explorer = { workspace = true }
solution_explorer = { workspace = true }
demo_plant_simulator = { workspace = true }

[tool.isort]
profile = "black"
line_length = 160
include_trailing_comma = false

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 160
indent-width = 4

[tool.ruff.lint]
select = ["F", "B", "S", "A", "Q", "PT", "PIE", "RET", "E", "W", "UP", "SIM", "I", "C901", "BLE", "C4", "DTZ", "LOG", "INP", "TD", "TC", "ARG", "NPY", "PD", "N", "PERF", "RUF"]
ignore = ["S101", "SIM108", "TD002", "TD004", "TD007", "BLE001", "N999"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
python_version = "3.12"
mypy_path = [
    "libraries/bmh",
    "libraries/data_explorer",
    "libraries/plant_simulator",
    "libraries/jmetalpy_extensions",
    "libraries/blending_simulator_lib/src",
    "apps/bmh_apps",
    "apps/benchmark_explorer",
    "apps/solution_explorer",
    "apps/demo_plant_simulator"
]
exclude = [
    "build/",
    "dist/",
    ".venv/",
    "__pycache__/"
]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true