[project]
name = "bmh_apps"
version = "2026.1.0.dev0"
description = "BMH Apps"
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "github@cipold.de" }
]
requires-python = ">=3.10"
dependencies = [
    "bmh",
    "dash",
    "dash_bootstrap_components",
    "hydra-core",
    "jmetalpy==1.5.5",
    "bmh_jmetalpy_extensions",
    "matplotlib",
    "numpy",
    "omegaconf",
    "pandas",
    "plotly",
    "scipy",
    "scikit-learn",
    "seaborn",
    "tqdm",
]
license = { text = "MIT License" }

[project.scripts]
plot_fun = "bmh_apps.funvar.plot_fun:main"
export_fun = "bmh_apps.funvar.export_fun:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
