[project]
name = "demo_plant_simulator"
version = "0.0.1"
description = "Demo Plant Simulator"
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "michael@cipold.de" }
]
requires-python = ">=3.10"
dependencies = [
    "graphviz",
    "influxdb",
    "plant_simulator",
]
license = { text = "MIT License" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
