[project]
name = "demo_plant_simulator"
version = "0.0.1"
description = "Demo Plant Simulator"
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "github@cipold.de" }
]
requires-python = ">=3.10"
dependencies = [
    "graphviz",
    "influxdb",
    "plant_simulator",
]
license = { text = "MIT License" }

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
