[project]
name = "solution_explorer"
version = "2026.1.2.dev0"
description = "Solution Explorer"
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "github@cipold.de" }
]
requires-python = ">=3.12"
dependencies = [
    "data_explorer",
    "matplotlib",
    "numpy",
    "pandas",
]
license = { text = "MIT License" }

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
