[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "blending_simulator_lib"
version = "2026.1.3.dev0"
description = "Blending Simulation for Bulk Material Homogenization"
keywords = ["blending", "simulation", "cpp", "pybind11", "bmh"]
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "github@cipold.de" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/jcbachmann/blending-evaluation"
Repository = "https://github.com/jcbachmann/blending-evaluation"

[project.optional-dependencies]
dev = ["pybind11-stubgen"]

[tool.setuptools.package-data]
"blending_simulator_lib" = ["_blending_simulator_lib.pyi", "py.typed"]

[tool.scikit-build]
cmake.args = [
    "-DBUILD_VISUALIZER=OFF",
    "-DBUILD_TESTS=OFF",
    "-DBUILD_CLI=OFF",
    "-DBUILD_FAST_SIMULATOR=ON",
    "-DBUILD_DETAILED_SIMULATOR=ON"
]

[[tool.scikit-build.overrides]]
if.platform-system = "^darwin"
cmake.args = [
    "-DBUILD_VISUALIZER=OFF",
    "-DBUILD_TESTS=OFF",
    "-DBUILD_CLI=OFF",
    "-DBUILD_FAST_SIMULATOR=ON",
    "-DBUILD_DETAILED_SIMULATOR=OFF"
]
