[project]
name = "bmh"
version = "2026.1"
description = "Library for Bulk Material Homogenization simulation and optimization"
keywords = ["bulk-material", "homogenization", "simulation", "optimization", "bmh", "jmetalpy"]
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "github@cipold.de" }
]
requires-python = ">=3.10"
dependencies = [
    "jmetalpy==1.5.5",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "bmh_jmetalpy_extensions~=2026.1",
    "blending_simulator_lib~=2026.1",
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/jcbachmann/blending-evaluation"
Repository = "https://github.com/jcbachmann/blending-evaluation"

[project.optional-dependencies]
BokehPlotServer = ["bokeh"]
DaskEvaluator = ["dask"]
DistributedEvaluator = ["dask", "distributed"]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
