[project]
name = "bmh_jmetalpy_extensions"
version = "2026.1.2"
description = "jMetalPy Extensions for Bulk Material Homogenization"
keywords = ["jmetalpy", "optimization", "metaheuristics", "extensions", "bmh", "dask"]
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "github@cipold.de" }
]
requires-python = ">=3.12"
dependencies = [
    "dask>=2021.0.0",
    "jmetalpy==1.5.5",
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/jcbachmann/blending-evaluation"
Repository = "https://github.com/jcbachmann/blending-evaluation"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
