[project]
name = "data_explorer"
version = "0.0.1"
description = "Data Explorer"
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "michael@cipold.de" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "pandas",
    "PyQt5",
]
license = { text = "MIT License" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
