[project]
name = "data_explorer"
version = "2026.1"
description = "Data Explorer"
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "github@cipold.de" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "PyQt5",
]
license = { text = "MIT License" }

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
