[project]
name = "jmetalpy_extensions"
version = "0.0.1"
description = "jMetalPy Extensions"
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "michael@cipold.de" }
]
requires-python = ">=3.10"
dependencies = [
    "dask",
    "jmetalpy==1.7.0",
]
license = { text = "MIT License" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
