[project]
name = "plant_simulator"
version = "2026.1.3.dev0"
description = "Plant Simulator"
readme = "README.md"
authors = [
    { name = "Michael Cipold", email = "github@cipold.de" }
]
requires-python = ">=3.12"
dependencies = [
    "bmh",
    "bokeh",
    "matplotlib",
    "numpy",
    "pandas",
    "tornado",
]
license = { text = "MIT License" }

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"
